--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,4 +23,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+h1{
+  font-size: 3.5rem;
+  font-weight: bold;
 }
